--- a/debian/rules
+++ b/debian/rules
@@ -25,12 +25,9 @@ override_dh_auto_configure:
 		 -DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		 -DCMAKE_SKIP_RPATH=ON \
 		 -DUSE_VOIP=ON \
-		 -DGAME_QVM=OFF \
-		 -DUSE_OPENAL_DLOPEN=OFF \
+		 -DBUILD_GAME_QVM=OFF \
 		 -DUSE_SDL2=${SDL2} \
-		 -DBUILD_TTY_CLIENT=OFF \
-		 $(shell test ! -f /usr/include/opus/opus.h || echo -DUSE_INTERNAL_OPUS=OFF) \
-		 $(shell test -d /usr/include/webp || echo -DUSE_WEBP=OFF)
+		 -DBUILD_TTY_CLIENT=OFF
 
 override_dh_auto_install:
 
