--- a/debian/rules
+++ b/debian/rules
@@ -24,6 +24,7 @@ override_dh_auto_configure:
 	cmake .. -DCMAKE_INSTALL_PREFIX=/usr \
 		 -DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		 -DCMAKE_SKIP_RPATH=ON \
+		 -DENABLE_HARDENING=ON \
 		 -DUSE_VOIP=ON \
 		 -DBUILD_GAME_QVM=OFF \
 		 -DUSE_SDL2=${SDL2} \
