Revert "Only download dependencies if NaCl is in use."
This breaks the build because sel_ldr and related files are needed so that they can be copied. Also this breaks Windows and Mac builds which need dependencies for other build targets.

This reverts commit 5cefafcd12af30fc5bd21b375474d04e0db7a76f.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -933,7 +933,7 @@ set_source_files_properties( ${EVERYTHING_C} PROPERTIES LANGUAGE CXX )
 ################################################################################
 
 # Import external dependencies
-if( DEPS_DIR AND ( BUILD_GAME_NACL_NATIVE_EXE OR BUILD_GAME_NACL_NATIVE_DLL OR BUILD_GAME_NACL ) )
+if( DEPS_DIR )
   # Download them if they not available
   if( NOT EXISTS ${DEPS_DIR} )
     get_filename_component( BASENAME ${DEPS_DIR} NAME )
