--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -511,17 +511,17 @@ set( ENGINELIST
   ${ENGINE_DIR}/framework/Resource.h
   ${ENGINE_DIR}/framework/VirtualMachine.cpp
   ${ENGINE_DIR}/framework/VirtualMachine.h
-  ${ENGINE_DIR}/qcommon/cm_load.cpp
-  ${ENGINE_DIR}/qcommon/cm_trisoup.cpp
-  ${ENGINE_DIR}/qcommon/cm_patch.cpp
-  ${ENGINE_DIR}/qcommon/cm_plane.cpp
-  ${ENGINE_DIR}/qcommon/cm_polylib.cpp
-  ${ENGINE_DIR}/qcommon/cm_test.cpp
-  ${ENGINE_DIR}/qcommon/cm_trace.cpp
-  ${ENGINE_DIR}/qcommon/cm_local.h
-  ${ENGINE_DIR}/qcommon/cm_patch.h
-  ${ENGINE_DIR}/qcommon/cm_polylib.h
-  ${ENGINE_DIR}/qcommon/cm_public.h
+  ${COMMON_DIR}/cm/cm_load.cpp
+  ${COMMON_DIR}/cm/cm_trisoup.cpp
+  ${COMMON_DIR}/cm/cm_patch.cpp
+  ${COMMON_DIR}/cm/cm_plane.cpp
+  ${COMMON_DIR}/cm/cm_polylib.cpp
+  ${COMMON_DIR}/cm/cm_test.cpp
+  ${COMMON_DIR}/cm/cm_trace.cpp
+  ${COMMON_DIR}/cm/cm_local.h
+  ${COMMON_DIR}/cm/cm_patch.h
+  ${COMMON_DIR}/cm/cm_polylib.h
+  ${COMMON_DIR}/cm/cm_public.h
   ${ENGINE_DIR}/qcommon/cmd.cpp
   ${ENGINE_DIR}/qcommon/common.cpp
   ${ENGINE_DIR}/qcommon/crypto.cpp
