--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,12 @@ before_script:
 script:
   - mkdir build
   - cd build
-  - CXXFLAGS="-D__extern_always_inline=inline" cmake -DCMAKE_BUILD_TYPE=Debug -DUSE_SDL2=OFF ..
+  - CXXFLAGS="-D__extern_always_inline=inline" cmake -DCMAKE_BUILD_TYPE=Debug -DUSE_SDL2=OFF -DBUILD_GAME_NACL=OFF ..
   - cmake --build .
 
 notifications:
   irc: "irc.freenode.org#unvanquished-dev"
+  irc: "irc.quakenet.org#unvanquished"
   on_success: change
   on_failure: always
 
