Audio file factory
The audio_file_factory class has one static method that returns a
std::unique_ptr<audio> that points to a wav_file, ogg_file or
opus file depending on the extension of the provided filename.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -617,9 +617,11 @@ set( CLIENTLIST
   ${ENGINE_DIR}/audio/wav_file.h
   ${ENGINE_DIR}/audio/wav_file.cpp
   ${ENGINE_DIR}/audio/ogg_file.h
-  ${ENGINE_DIR}/audio/ogg_file.h
+  ${ENGINE_DIR}/audio/ogg_file.cpp
+  ${ENGINE_DIR}/audio/opus_file.h
   ${ENGINE_DIR}/audio/opus_file.cpp
-  ${ENGINE_DIR}/audio/opus_file.cpp
+  ${ENGINE_DIR}/audio/audio_file_factory.h
+  ${ENGINE_DIR}/audio/audio_file_factory.cpp
 )
 
 set( TTYCLIENTLIST
