Add versioned dependencies, and update deps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -295,6 +295,9 @@ endif()
 # Directories
 ################################################################################
 
+# Dependencies version, this must match the number in external_deps/build.sh
+set( DEPS_VERSION 1 )
+
 set( CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake )
 set( MOUNT_DIR ${CMAKE_SOURCE_DIR}/src )
 set( OBJ_DIR ${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY} )
@@ -311,27 +314,27 @@ else()
 endif()
 if( MSVC )
   if( ARCH STREQUAL "x86_64" )
-    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/msvc64 )
+    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/msvc64-${DEPS_VERSION} )
   else()
-    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/msvc32 )
+    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/msvc32-${DEPS_VERSION} )
   endif()
 elseif( WIN32 )
   if( ARCH STREQUAL "x86_64" )
-    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/mingw64 )
+    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/mingw64-${DEPS_VERSION} )
   else()
-    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/mingw32 )
+    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/mingw32-${DEPS_VERSION} )
   endif()
 elseif( APPLE )
   if( ARCH STREQUAL "x86_64" )
-    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/macosx64 )
+    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/macosx64-${DEPS_VERSION} )
   else()
-    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/macosx32 )
+    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/macosx32-${DEPS_VERSION} )
   endif()
 elseif( LINUX )
   if( ARCH STREQUAL "x86_64" )
-    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/linux64 )
+    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/linux64-${DEPS_VERSION} )
   else()
-    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/linux32 )
+    set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/linux32-${DEPS_VERSION} )
   endif()
 endif()
 if( LINUX AND ARCH STREQUAL "x86_64" )
