Build-depend on NaCl build env. package and use when available.
This package is, essentially, one of the cut-down NaCl SDK tarballs (either
i386 or amd64) prepared by Amanieu d'Antras.

--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,7 @@ Section: contrib/games
 Priority: extra
 Maintainer: Darren Salt <devspam@moreofthesa.me.uk>
 Build-Depends: debhelper (>= 8.0.0), g++ (>= 4.7) | g++-4.7, po-debconf, cmake,
+	unv-nacl-sdk,
 	libcurl4-gnutls-dev,
 	libfreetype6-dev,
 	libglew-dev | libglew1.6-dev | libglew1.5-dev,
