Detect whether Python2 exists when building NaCl game modules and set PNACLPYTHON before executing NaCl build cmds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -292,6 +292,17 @@ if( APPLE )
 endif()
 
 ################################################################################
+# Determine python version and set env variable
+################################################################################
+if( BUILD_GAME_NACL )
+  set( PythonInterp_FIND_VERSION 2 )
+  find_package(PythonInterp)
+  if ( NOT PYTHONINTERP_FOUND )
+    message( "Please set the PNACLPYTHON environment variable to your Python2 executable")
+  endif()
+endif()
+
+################################################################################
 # Directories
 ################################################################################
 
@@ -1299,7 +1310,7 @@ function( GAMEMODULE )
 
       if( EXT STREQUAL ".c" OR EXT STREQUAL ".cpp" OR EXT STREQUAL ".cc" )
         add_custom_command( OUTPUT ${OBJ}
-          COMMAND ${PNACL_TOOLCHAIN}/pnacl-clang++${PNACL_BIN_EXT}
+          COMMAND PNACLPYTHON=${PYTHON_EXECUTABLE} ${PNACL_TOOLCHAIN}/pnacl-clang++${PNACL_BIN_EXT}
             -x c++ -std=gnu++11
             ${NACL_COMPILE_OPTIONS}
             -c
@@ -1315,7 +1326,7 @@ function( GAMEMODULE )
     # Generate PNaCL platform-independent executable
     add_custom_command(
       OUTPUT ${FULL_OUTPUT_DIR}/${GAMEMODULE_NAME}.pexe
-      COMMAND ${PNACL_TOOLCHAIN}/pnacl-clang++${PNACL_BIN_EXT}
+      COMMAND PNACLPYTHON=${PYTHON_EXECUTABLE} ${PNACL_TOOLCHAIN}/pnacl-clang++${PNACL_BIN_EXT}
         ${NACL_COMPILE_OPTIONS}
         -o ${FULL_OUTPUT_DIR}/${GAMEMODULE_NAME}.pexe
         ${OBJECTS}
@@ -1325,7 +1336,7 @@ function( GAMEMODULE )
     # Generate NaCl executables for x86 and x86_64
     add_custom_command(
       OUTPUT ${FULL_OUTPUT_DIR}/${GAMEMODULE_NAME}-x86.nexe
-      COMMAND ${PNACL_TOOLCHAIN}/pnacl-translate${PNACL_BIN_EXT}
+      COMMAND PNACLPYTHON=${PYTHON_EXECUTABLE} ${PNACL_TOOLCHAIN}/pnacl-translate${PNACL_BIN_EXT}
         ${NACL_TRANSLATE_OPTIONS}
         -arch i686
         -o ${FULL_OUTPUT_DIR}/${GAMEMODULE_NAME}-x86.nexe
@@ -1334,7 +1345,7 @@ function( GAMEMODULE )
     )
     add_custom_command(
       OUTPUT ${FULL_OUTPUT_DIR}/${GAMEMODULE_NAME}-x86_64.nexe
-      COMMAND ${PNACL_TOOLCHAIN}/pnacl-translate${PNACL_BIN_EXT}
+      COMMAND PNACLPYTHON=${PYTHON_EXECUTABLE} ${PNACL_TOOLCHAIN}/pnacl-translate${PNACL_BIN_EXT}
         ${NACL_TRANSLATE_OPTIONS}
         -arch x86-64
         -o ${FULL_OUTPUT_DIR}/${GAMEMODULE_NAME}-x86_64.nexe
