--- a/debian/control
+++ b/debian/control
@@ -39,7 +39,7 @@ Description: Team-based FPS game, aliens v. humans
 Package: unvanquished-server
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, adduser,
-	unvanquished-common (= ${binary:Version})
+	unvanquished-common (= ${binary:Version}), unv-nacl-runtime
 Suggests: unvanquished, geoip-database | geoip-database-contrib
 Conflicts: unvanquished (<< 0.3.5-2~)
 Replaces: unvanquished (<< 0.3.5-2~)
