--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1252,7 +1252,7 @@ function( GAMEMODULE )
     target_link_libraries( ${GAMEMODULE_NAME}-nacl-native-dll ${LIBS_BASE} )
     set_target_properties( ${GAMEMODULE_NAME}-nacl-native-dll PROPERTIES
       PREFIX ""
-      COMPILE_DEFINITIONS ${GAMEMODULE_COMPILE_DEF}
+      COMPILE_DEFINITIONS "${GAMEMODULE_COMPILE_DEF}"
     )
   endif()
 
@@ -1261,7 +1261,7 @@ function( GAMEMODULE )
     target_link_libraries( ${GAMEMODULE_NAME}-nacl-native-exe ${LIBS_BASE} )
     set_target_properties( ${GAMEMODULE_NAME}-nacl-native-exe PROPERTIES
       OUTPUT_NAME ${GAMEMODULE_NAME}-nacl-native-exe
-      COMPILE_DEFINITIONS ${GAMEMODULE_COMPILE_DEF}
+      COMPILE_DEFINITIONS "${GAMEMODULE_COMPILE_DEF}"
     )
   endif()
 
@@ -1455,7 +1455,7 @@ if( BUILD_GAME_QVM )
 endif()
 
 GAMEMODULE( NAME game
-  COMPILE_DEF IN_GAME_VM BUILD_VM BUILD_GAME
+  COMPILE_DEF BUILD_VM BUILD_GAME
   HAS_NACL 1
   HAS_QVM 0
   FILES ${GAMELIST}
@@ -1466,7 +1466,7 @@ GAMEMODULE( NAME game
 )
 
 GAMEMODULE( NAME cgame
-  COMPILE_DEF IN_CGAME_VM BUILD_VM BUILD_CGAME
+  COMPILE_DEF BUILD_VM BUILD_CGAME
   HAS_NACL 0
   HAS_QVM 1
   FILES ${CGAMELIST}
@@ -1510,7 +1510,7 @@ if( BUILD_SERVER )
   add_executable( server WIN32 ${SERVERLIST} ${DEDSERVERLIST} ${ENGINELIST} ${SHAREDLIST}
     ${LIBSRC_BASE} ${LIBSRC_ENGINE} ${WIN_RC} )
   target_link_libraries( server ${LIBS_ENGINE} ${LIBS_BASE} )
-  set_property( TARGET server APPEND PROPERTY COMPILE_DEFINITIONS BUILD_ENGINE BUILD_SERVER DEDICATED )
+  set_property( TARGET server APPEND PROPERTY COMPILE_DEFINITIONS BUILD_ENGINE BUILD_SERVER )
   set_target_properties( server PROPERTIES OUTPUT_NAME "daemonded" PREFIX "" )
 endif()
 
