Use zip for deps on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -313,24 +313,28 @@ else()
   set( FULL_OUTPUT_DIR ${CMAKE_BINARY_DIR}/${CMAKE_CFG_INTDIR} )
 endif()
 if( MSVC )
+  set( DEPS_EXT ".zip" )
   if( ARCH STREQUAL "x86_64" )
     set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/msvc64-${DEPS_VERSION} )
   else()
     set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/msvc32-${DEPS_VERSION} )
   endif()
 elseif( WIN32 )
+  set( DEPS_EXT ".zip" )
   if( ARCH STREQUAL "x86_64" )
     set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/mingw64-${DEPS_VERSION} )
   else()
     set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/mingw32-${DEPS_VERSION} )
   endif()
 elseif( APPLE )
+  set( DEPS_EXT ".tar.bz2" )
   if( ARCH STREQUAL "x86_64" )
     set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/macosx64-${DEPS_VERSION} )
   else()
     set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/macosx32-${DEPS_VERSION} )
   endif()
 elseif( LINUX )
+  set( DEPS_EXT ".tar.bz2" )
   if( ARCH STREQUAL "x86_64" )
     set( DEPS_DIR ${CMAKE_SOURCE_DIR}/external_deps/linux64-${DEPS_VERSION} )
   else()
@@ -971,9 +975,9 @@ if( DEPS_DIR )
   # Download them if they not available
   if( NOT EXISTS ${DEPS_DIR} )
     get_filename_component( BASENAME ${DEPS_DIR} NAME )
-    set( REMOTE "http://vanquished.zapto.org/~amanieu/unvanquished_deps/${BASENAME}.tar.bz2" )
+    set( REMOTE "http://vanquished.zapto.org/~amanieu/unvanquished_deps/${BASENAME}${DEPS_EXT}" )
     message( STATUS "Downloading dependencies from '${REMOTE}'" )
-    file( DOWNLOAD ${REMOTE} ${OBJ_DIR}/${BASENAME}.tar.bz2 SHOW_PROGRESS
+    file( DOWNLOAD ${REMOTE} ${OBJ_DIR}/${BASENAME}${DEPS_EXT} SHOW_PROGRESS
       STATUS DOWNLOAD_RESULT LOG DOWNLOAD_LOG )
     list( GET DOWNLOAD_RESULT 0 DOWNLOAD_STATUS )
     list( GET DOWNLOAD_RESULT 1 DOWNLOAD_STRING )
@@ -986,10 +990,10 @@ if( DEPS_DIR )
     message( STATUS "Download completed successfully" )
 
     # Extract the downloaded archive
-    execute_process( COMMAND ${CMAKE_COMMAND} -E tar xzf ${OBJ_DIR}/${BASENAME}.tar.bz2
+    execute_process( COMMAND ${CMAKE_COMMAND} -E tar xzf ${OBJ_DIR}/${BASENAME}${DEPS_EXT}
       WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/external_deps RESULT_VARIABLE EXTRACT_RESULT )
     if( NOT EXTRACT_RESULT EQUAL 0 )
-      message( FATAL_ERROR "Could not extract ${BASENAME}.tar.bz2" )
+      message( FATAL_ERROR "Could not extract ${BASENAME}${DEPS_EXT}" )
     endif()
   endif()
 
