--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,17 @@ install:
   - sudo sh -c 'echo deb http://debs.unvanquished.net precise main >>/etc/apt/sources.list'
   - sudo apt-key adv --keyserver x-hkp://pool.sks-keyservers.net --recv-key 06AF4C14
   - sudo apt-get -qq update
-  - sudo apt-get -qq install cmake libwebp-dev libglew-dev libgmp-dev libjpeg8-dev libcurl4-gnutls-dev libfreetype6-dev libgeoip-dev libncursesw5-dev libogg-dev libopenal-dev libpng-dev libsdl1.2-dev libspeexdsp-dev libtheora-dev libvorbis-dev libopusfile-dev libxvidcore-dev nettle-dev zlib1g-dev
+  - sudo apt-get -qq install libwebp-dev libglew-dev libgmp-dev libjpeg8-dev libcurl4-gnutls-dev libfreetype6-dev libgeoip-dev libncursesw5-dev libogg-dev libopenal-dev libpng-dev libsdl1.2-dev libspeexdsp-dev libtheora-dev libvorbis-dev libopusfile-dev libxvidcore-dev nettle-dev zlib1g-dev
+  # install cmake 2.8.12 manually, see
+  #     * https://github.com/travis-ci-tester/travis-test-cmake
+  - wget http://www.cmake.org/files/v2.8/cmake-2.8.12.tar.gz
+  - tar xf cmake-2.8.12.tar.gz
+  - cd cmake-2.8.12
+  - ./bootstrap --system-curl
+  - make
+  - sudo make install
+  - cd ..
+  # -- end
 
 before_script:
   - wget http://clang.llvm.org/libstdc++4.6-clang11.patch;
