Use a pre-built version of CMake on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,10 @@ install:
   - sudo apt-key adv --keyserver x-hkp://pool.sks-keyservers.net --recv-key 06AF4C14
   - sudo apt-get -qq update
   - sudo apt-get -qq install libwebp-dev libglew-dev libgmp-dev libjpeg8-dev libcurl4-gnutls-dev libfreetype6-dev libgeoip-dev libncursesw5-dev libogg-dev libopenal-dev libpng-dev libsdl1.2-dev libspeexdsp-dev libtheora-dev libvorbis-dev libopusfile-dev libxvidcore-dev nettle-dev zlib1g-dev
-  # install cmake 2.8.12 manually, see
-  #     * https://github.com/travis-ci-tester/travis-test-cmake
-  - wget http://www.cmake.org/files/v2.8/cmake-2.8.12.tar.gz
-  - tar xf cmake-2.8.12.tar.gz
-  - cd cmake-2.8.12
-  - ./bootstrap --system-curl
-  - make
-  - sudo make install
-  - cd ..
-  # -- end
+  - wget http://ppa.launchpad.net/purplekarrot/cmake/ubuntu/pool/main/c/cmake/cmake-data_2.8.12.20131104_all.deb
+  - wget http://ppa.launchpad.net/purplekarrot/cmake/ubuntu/pool/main/c/cmake/cmake_2.8.12.20131104_amd64.deb
+  - sudo apt-get remove cmake-data cmake
+  - sudo dpkg --install cmake-data_2.8.12.20131104_all.deb cmake_2.8.12.20131104_amd64.deb
 
 before_script:
   - wget http://clang.llvm.org/libstdc++4.6-clang11.patch;
