--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
 script:
   - mkdir build
   - cd build
-  - CXXFLAGS="-D__extern_always_inline=inline" cmake -DCMAKE_BUILD_TYPE=Debug -DUSE_SDL2=OFF -DBUILD_GAME_NACL=OFF -DFREETYPE_INCLUDE_DIR_freetype2=/usr/include/freetype2 ..
+  - CXXFLAGS="-D__extern_always_inline=inline" cmake -DCMAKE_BUILD_TYPE=Debug -DUSE_SDL2=OFF -DBUILD_GAME_NACL=OFF -DFREETYPE_INCLUDE_DIR_freetype2=/usr/include/freetype2 -DBUILD_TTY_CLIENT=OFF ..
   - cmake --build .
 
 notifications:
