Add -fstack-protector-strong to hardening flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -223,9 +223,11 @@ else()
   set_c_cxx_flag( "-D_FORTIFY_SOURCE=2" RELWITHDEBINFO )
   set_c_cxx_flag( "-D_FORTIFY_SOURCE=2" MINSIZEREL )
   if( ENABLE_HARDENING )
+    try_c_cxx_flag( FSTACK_PROTECTOR_STRONG "-fstack-protector-strong" )
+    if( NOT FLAG_FSTACK_PROTECTOR_STRONG )
+      try_c_cxx_flag( FSTACK_PROTECTOR_ALL "-fstack-protector-all" )
+    endif()
     try_c_cxx_flag( FNO_STRICT_OVERFLOW "-fno-strict-overflow" )
-    try_c_cxx_flag( FSTACK_PROTECTOR_ALL "-fstack-protector-all" )
-    try_c_cxx_flag( PARAM_SSP_BUFFER_SIZE "--param ssp-buffer-size=1" )
     try_c_cxx_flag( WSTACK_PROTECTOR "-Wstack-protector" )
     try_c_cxx_flag( FPIE "-fPIE" )
     try_linker_flag( LINKER_PIE "-pie" )
