Fix spiker config files.

--- a/main/configs/buildables/spiker.attr.cfg
+++ b/main/configs/buildables/spiker.attr.cfg
@@ -1,8 +1,8 @@
 // Generic
 humanName         "Spiker"
-description       "Ejects lethal spikes at an approaching human. These are highly effective when used in conjunction with a trapper to hold the victim in place."
+description       "Ejects lethal spikes at an approaching human."
 team              aliens
-icon              "icons/iconb_acid_tube"
+icon              "icons/iconb_spiker"
 
 // Generic limits
 unlockThreshold   0
