--- a/pkg/unvanquished_src.dpkdir/configs/buildables/spiker.model.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/buildables/spiker.model.cfg
@@ -1,4 +1,4 @@
-model 0 models/buildables/leech/leech.md3 
+model 0 models/buildables/spiker/spiker.iqm
 modelScale  2
 mins        -16 -16 -16
 maxs        16 16 8
