Set cmake min. version to 2.8.10 (except on Mac).
This is a partial reversion of 8907c0f442fbff57711135a66220b0bcb870a506.
2.8.10 was chosen after build tests on Debian and Ubuntu.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,9 +24,14 @@
 # (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 # SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-cmake_minimum_required( VERSION 2.8.12 )
+cmake_minimum_required( VERSION 2.8.10 )
 if( POLICY CMP0017 )
   cmake_policy( SET CMP0017 NEW )
+endif()
+
+# Need 2.8.12 for RPATH support
+if( APPLE )
+  cmake_minimum_required( VERSION 2.8.12 )
 endif()
 
 include( CMakeDependentOption )
